tests/fixtures/errors/non_exhaustive_match.gcl
// Error: non-exhaustive match — missing variant
pub type Nominal {}
pub type Warning {
    code: Dimensionless,
}
pub type Critical {
    code: Dimensionless,
}
pub type Status = Nominal | Warning | Critical;

param s: Status = Nominal { };

node result: Dimensionless = match @s {
    Nominal => 0.0,
    Warning { code } => code,
};
